--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "react": "16.0.0",
-    "react-native": "0.51.0"
+    "react-native": "0.51.0",
+    "react-navigation": "^1.0.0-beta.22",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "babel-jest": "22.0.4",
